--- a/index.html
+++ b/index.html
@@ -6,20 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./Assets/Img/Rabbit.png" type="image/x-icon">
     <title>CV Rosa J</title>
+    <!--Inicio Link Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Fin Link Bootstrap-->
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
 </head>
 
 <body>
-    <h1>Currículum Vitae</h1>
-    <img src="./Assets/Img/Mifoto.jpg" alt="Mi Foto" width="200">
-    <h2>Rosa Angélica Jelves Olivares</h2>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Educación</a>
+                    <a class="nav-link" href="#">Experiencia</a>
+                    <a class="nav-link" href="https://rosirijilla.github.io/rosa-cv/">Portafolio</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-    <a target="_blank" href="./Portafolio.html">
-        <h4>Revisar Portafolio</h4>
+    <header class="fondo-titulo">
+        <h1>Currículum Vitae</h1>
+    </header>
 
-    </a>
+    <main class="datos">
+        <h2>Rosa Angélica Jelves Olivares</h2>
+        <div class="datos-personales">
+            <h3>Datos Personales</h3>
+            <ul>
+                <li>Nacionalidad: Chilena</li>
+                <li>Fecha de nacimiento: 09-06-1999</li>
+                <li>Edad: 24 años</li>
+                <li>Domicilio: Peñalolén, Santiago, Chile.</li>
+                <li>Número de teléfono: +569 8302 0130</li>
+                <li>Correo electrónico: rosa.sakura.j@gmail.com</li>
+            </ul>
+        </div>
 
-    <section>
-        <h3>Resumen</h3>
+    </main>
+
+
+
+    <section class="Biografía">
+        <h3>Biografía</h3>
         <p>Rosa Angélica Jelves Olivares nació en Santiago de Chile en 1999 y es una destacada artista visual. Completó
             su licenciatura en Artes Plásticas y obtuvo su título de Orfebre en la Universidad de Chile. A lo largo de
             su carrera, Rosa ha tenido la oportunidad de exhibir su trabajo en diversos espacios culturales, tales como
@@ -33,44 +69,101 @@
         </p>
     </section>
 
-    <section>
-        <h3>Datos Personales</h3>
-        <ol>
-            <li>Nombre: Rosa Angélica Jelves Olivares</li>
-            <li>Lugar de Nacimiento: Providencia, Región Metropolitana, Chile</li>
-            <li>09 de Junio de 1999</li>
-        </ol>
+    <section class="estudios">
+        <div class="estudios-formales">
+            <h3>Estudios Formales</h3>
+            <ul>
+                <li>2024-Actualidad</li>
+                <div>
+                    <p>Desarrollo Full Stack</p>
+                    <p>Desafío Latam</p>
+                </div>
+                <li>2021-2023</li>
+                <div>
+                    <p>Título de Orfebre</p>
+                    <p>Universidad de Chile</p>
+                </div>
+                <li>2017-2021</li>
+                <div>
+                    <p>Licenciatura en Artes Plásticas</p>
+                    <p>Universidad de Chile</p>
+                </div>
+                <li>2019</li>
+                <div>
+                    <p>Curso de Paisaje Sonoro</p>
+                    <p>Universidad de Chile</p>
+                </div>
+            </ul>
+        </div>
+        <div class="estudios-informales">
+            <h3>Estudios Complementarios</h3>
+            <ul>
+                <li>2021-2022</li>
+                <div>
+                    <p>Joyería General</p>
+                    <p>Escuela Pamela de la Fuente</p>
+                </div>
+                <li>2020</li>
+                <div>
+                    <p>Laboratorio de Proyecto de Dossier</p>
+                    <p>Por la artista Angie Saiz</p>
+                </div>
+                <li>2020</li>
+                <div>
+                    <p>Laboratorio de Construcción de Portafolio</p>
+                    <p>Centro Nacional de Arte Contemporáneo de Cerrillos</p>
+                </div>
+            </ul>
+        </div>
     </section>
 
-    <section>
-        <h3>Formación</h3>
-        <p>La trayectoria académica de Rosa comenzó en 2017, año en que ingresó a la Facultad de Arte de la Universidad
-            de Chile, situada en el Campus Juan Gómez Millas. Aunque tenía previsto completar las asignaturas de su
-            carrera en 2020, diversas circunstancias, incluyendo paralizaciones y el contexto general, llevaron a que
-            concluyera sus estudios a inicios de 2021. Tras este periodo, Rosa emprendió su proyecto de Tesis para
-            graduarse como Orfebre, logrando su objetivo en 2023 tras dos años de dedicación y presentando un destacado
-            proyecto junto con su primera exposición individual, titulada “1dLa d3 LaS vi5c3ras”.
+    <section class="laboral">
+        <h3>Experiencia Laboral</h3>
+        <div class="experiencia-laboral">
+            <ul>
+                <li>2017-Actualidad</li>
+                <div>
+                    <p>Procesos de Desarrollo web y completación de datos</p>
+                    <p>Denegocios.cl</p>
+                </div>
+                <li>2023</li>
+                <div>
+                    <p>Creación contenido web</p>
+                    <p>Proyecto Findart Aire</p>
+                </div>
+                <li>2023</li>
+                <div>
+                    <p>Montajista</p>
+                    <p>Bienal de Arte Contemporáneo de Santa Cruz de la Sierra,Bolivia-Altillo Beni</p>
+                </div>
+                <li>2021-Actualidad</li>
+                <div>
+                    <p>Asistente de Producción</p>
+                    <p>Artista Angie Saiz</p>
+                </div>
+                <li>2019</li>
+                <div>
+                    <p>Montajista</p>
+                    <p>MAC Quinta Normal, Santiago de Chile-Exposición Zimoun</p>
+                </div>
+                
 
-            Posteriormente, Rosa se involucró en variadas iniciativas y eventos artísticos, siendo su participación en
-            la Bienal de Arte Contemporáneo de Santa Cruz de la Sierra, en Bolivia, una de las más notables. En la
-            actualidad, continúa enriqueciendo su repertorio de habilidades, tanto en su rol en DeNegocios.cl como en
-            sus estudios de programación en Desafío Latam. Su aspiración es integrar estos nuevos conocimientos en el
-            ámbito de las artes visuales, buscando así expandir los horizontes del arte.
-        </p>
+
+            </ul>
+        </div>
+        
     </section>
 
-    <section>
-        <h3>Premios y Reconocimientos</h3>
-        <ul>
-            <li>Tercera mención honrosa - Artes mediales Premio Municipal Arte Joven, 2019. </li>
-            <li>Primer lugar en concurso de pintura escolar Municipalidad de Ñuñoa, 2015.</li>
-        </ul>
-    </section>
-
-    <h4>Links Importantes</h4>
+    <h4>Redes Sociales</h4>
     <a target="_blank" href="https://www.linkedin.com/in/rosa-jelves-843552145/">Perfil de Linkedin</a>
     <br>
     <a target="_blank" href="https://www.instagram.com/rosirijilla_/">Perfil de Instagram</a>
+
+    <!--Inicio Link js bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <!--Fin Link js bootstrap-->
 
 </body>
 
