Corrección linkeo interno, anclas

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Educación</a>
-                    <a class="nav-link" href="#">Experiencia</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link" href="#estudios">Educación</a>
+                    <a class="nav-link" href="#experiencia">Experiencia</a>
                     <a class="nav-link" href="https://rosirijilla.github.io/portafolio-cv/">Portafolio</a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
 
     </section>
 
-    <section class="container estudios">
+    <section class="estudios container " id="estudios">
         <div class="row">
             <div class="estudios-formales ms-4 mt-5">
                 <h3 class="mb-3">Estudios Formales</h3>
@@ -159,7 +159,7 @@
         </div>
     </section>
 
-    <section class="container">
+    <section class="container experiencia" id="experiencia">
         <div class="row">
             <div class="laboral ms-4 mt-5 mb-5">
                 <h3 class="mb-3">Experiencia Laboral</h3>
