Corrección del h1 para versión celular

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main class="datos">
         <div class="container">
             <div class="row">
-                <div class="mt-5">
+                <div class="mt-5 col-sm-12">
                     <h2 class="mb-4 ms-4">Rosa Angélica Jelves Olivares</h2>
                     <div class="datos-personales">
                         <ul type="none">
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="ms-4 mt-5 border-bottom border-danger-subtle">
                 <h3 class="mb-3">Biografía</h3>
-                <p>Rosa Angélica Jelves Olivares nació en Santiago de Chile en 1999 y es una destacada artista visual.
+                <p class="col-sm-12">Rosa Angélica Jelves Olivares nació en Santiago de Chile en 1999 y es una destacada artista visual.
                     Completó
                     su licenciatura en Artes Plásticas y obtuvo su título de Orfebre en la Universidad de Chile. A lo
                     largo de
@@ -88,7 +88,7 @@
 
     </section>
 
-    <section class="estudios container " id="estudios">
+    <section class="estudios container" id="estudios">
         <div class="row">
             <div class="estudios-formales ms-4 mt-5">
                 <h3 class="mb-3">Estudios Formales</h3>
