prueba de corrección responsive

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </div>
     </nav>
 
-    <header class="fondo-titulo">
+    <header class="container-fluid fondo-titulo">
         <h1>Currículum Vitae</h1>
     </header>
 
-    <main class="datos">
+    <main class="datos container-fluid">
         <div class="container">
             <div class="row">
                 <div class="mt-5 col-sm-12">
@@ -213,7 +213,7 @@
 
     </section>
 
-    <section class="container-fluid redes-fondo">
+    <footer class="container-fluid redes-fondo">
         <div class="container">
             <div class="row">
                 <div class="d-flex">
@@ -236,7 +236,7 @@
                 
             </div>
         </div>
-    </section>
+    </footer>
 
     <!--Inicio Link js bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
